[package]
name = "rant"
version = "4.0.0-alpha.8"
authors = ["Nicholas Fleck <TheBerkin@users.noreply.github.com>"]
edition = "2018"
homepage = "https://rant-lang.org"
repository = "https://github.com/rant-lang/rant"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["rant", "rantlang", "procedural", "text", "generation"]
categories = ["text-processing", "game-development", "template-engine"]
description = "The Rant procedural generation language"
default-run = "rant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[[bin]]
name = "rant"
path = "src/tools/cli/main.rs"
required-features = ["cli-deps"]

[features]
cli-deps = ["argh", "codemap", "codemap-diagnostic", "colored", "ctrlc", "embedded-triple", "exitcode"]


[dependencies]
# Library
cast = "0.2.3"
fnv = "1.0.7"
line-col = "0.2.1"
logos = "0.11.4"
quickscope = "0.1.3"
rand = "0.7.3"
rand_xoshiro = "0.4.0"
smallvec = "1.4.2"
smartstring = "0.2.5"

# CLI
argh = { version = "0.1.3", optional = true }
codemap = { version = "0.1.3", optional = true }
codemap-diagnostic = { version = "0.1.1", optional = true }
colored = { version = "2.0.0", optional = true }
ctrlc = { version = "3.1.6", optional = true }
embedded-triple = { version = "0.1.0", optional = true }
exitcode = { version = "1.1.2", optional = true }

[dev-dependencies]
assert_matches = "1.3.0"